--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@
 #card{
 margin-top:150px;
 margin-left: 85px;
-background-color:hsla(0, 100%, 100%, 0.928);
+background-color:#FFFEFE;
 }
 .cardsfirst{
     display: flex;
@@ -149,10 +149,56 @@ background-color:hsla(0, 100%, 100%, 0.928);
     overflow:shadow;
     
     display:flex ;
-    background-color:aqua;
+   
     width:280px;
-    height: 190px;
+    height:220px;
     margin-right:30px;
     
+    box-shadow:rgb(238, 228, 228) 2px 2px 2px 2px;
+    background-color:#FFFEFE;
+    img{
+        width:110px;
+        height: 110px;
+        margin-top:90px;
+        margin-left: 20px;
+    }
+    
 
+}
+.cardtext{
+    display: block;
+    margin-left: 25px;
+   
+    p{
+        font-size:30px;
+        color:rgba(89, 68, 63, 1);
+        font-family: 'SchoolBook';
+    }
+    h1{ margin-top:120px;;
+        font-size:16px;
+        font-family: 'Futura New';
+        color:rgba(89, 68, 63, 1);
+    }
+}
+.cardsseconds{
+    display: flex;
+    justify-content: space-between;
+    gap:10px;
+    margin-left: 150px;
+    margin-top:24px;
+}
+.cardsthirds{
+    display: flex;
+    justify-content: space-between;
+    gap:10px;
+    margin-left: 150px;
+    margin-top:24px;
+}
+
+.cardsfourths{
+    display: flex;
+    justify-content: space-between;
+    gap:10px;
+    margin-left: 150px;
+    margin-top:24px;
 }
