--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
     body{
         background-color: #FFFEFE;
+        font-family: 'Futura New';
     }
 .container{
     width: 1440px;
@@ -330,4 +331,60 @@ margin-top: 40px;
 }
 .agetext{
     text-align: center;
+}
+
+#doggy{
+    background-color:rgba(255, 197, 158, 1);
+    margin-top: 200px;
+  
+}
+.all{
+    display:flex;
+    padding-top: 150px;
+}
+.doggytexts{
+    display: block;
+    
+  
+    
+}
+.titled{
+    margin-left: 100px;
+    font-size:30px;
+color:rgba(255, 255, 255, 1);
+
+}
+.maindt{
+    margin-left:95px;
+    font-size:80px;
+    color:rgba(255, 255, 255, 1);
+    width: 800px;
+    
+    
+}
+.doggybtn{
+    margin-left: 100px;
+    height: 100px;
+   
+
+    display: flex;
+    gap:20px;
+    img{
+        height:81px;
+
+    }
+  
+}
+
+.doggyimages{
+    display: flex;
+
+    margin-left:0px;
+    width: 950px;
+}
+.doggi{
+    width:300px;
+    height: 220px;
+    margin-top: 150px;
+    margin-left: -50px;
 }
